# PhysicsDMD

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-debug.sh  build-pip.sh  build-release.sh  main.py  module.cpp  pyproject.toml  test.py  test_eigen.py
include/: eigen_dmd.hpp  eigen_module.hpp
python_r/: run.py
src/: eigen_dmd.cpp  eigen_module.cpp
utils/: dmd_plotter.py
